--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,20 @@
 {
-    "name": "txtghana/txtpay",
+    "name": "prinx/txtpay",
     "description": "TXTGHANA Payment Gateway SDK.",
     "type": "library",
+    "license": "MIT",
+    "minimum-stability": "stable",
     "require": {
         "prinx/dotenv": "^0.4",
         "prinx/notify": "^0.0",
-        "symfony/http-client": "^5.1"
+        "symfony/http-client": "^5.1",
+        "illuminate/collections": "^8.16"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.4"
+        "orchestra/testbench": "^6.0",
+        "phpunit/phpunit": "^9.4",
+        "symfony/var-dumper": "^5.1",
+        "nunomaduro/collision": "^5.1"
     },
     "autoload": {
         "psr-4": {
@@ -20,6 +26,11 @@
             "Tests\\": "tests"
         }
     },
-    "license": "MIT",
-    "minimum-stability": "stable"
+    "extra": {
+        "laravel": {
+            "providers" : [
+                "Txtpay\\Laravel\\ServiceProvider"
+            ]
+        }
+    }
 }
