--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "prinx/dotenv": "^0.4",
         "prinx/notify": "^0.0",
         "symfony/http-client": "^5.1",
-        "illuminate/collections": "^8.16"
+        "illuminate/collections": "^8.16",
+        "symfony/http-foundation": "^5.1"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
