--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "prinx/notify": "^0.0",
         "symfony/http-client": "^5.1",
         "illuminate/collections": "^8.16",
-        "symfony/http-foundation": "^5.1"
+        "symfony/http-foundation": "^5.1",
+        "respect/validation": "^2.2"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
