build: add test script to composer.json

--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,8 @@
                 "Txtpay\\Laravel\\ServiceProvider"
             ]
         }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
     }
 }
